# ros2_ws

./: .gitignore  .gitmodules  1.txt  README.md  visualize_odom.py
src/: README.md
src/explore/: README.md
src/gs_ros_interfaces/: CMakeLists.txt  package.xml
src/ia_cartographer/: CMakeLists.txt  package.xml
src/ia_cartographer/config/: mapper_params_online_async.yaml  nav2_params_genesis.yaml  param_mini_omni copy.yaml  param_mini_omni.yaml  param_mini_omni1015.yaml  param_mini_omni1016.yaml  param_mini_omni1017.yaml
src/ia_cartographer/launch/: bringup_launch.py  cartographer_mapping.launch.py  cartographer_navigation.launch.py  nav.launch copy.py  nav.launch.py  nav2_with_alignment.launch.py  occupancy_grid.launch.py  online_async_launch.py  wheeltec_nav2.launch.py
src/ia_cartographer/maps/: org_ia_map.pgm
src/ia_cartographer/scripts/: carto_set_initial_pose_node.py  test.py
src/ia_integrated_launch/: package.xml  setup.cfg  setup.py
src/ia_integrated_launch/launch/: integrated_navigation.launch.py
src/ia_robot/: CMakeLists.txt  README_OBSTACLE_AVOIDANCE.md  package.xml
src/ia_robot/config/: ia_robot_controller.yaml  nav2.rviz  swerve_drive_controller.yaml  urdf.rviz
src/ia_robot/launch/: ctrl_ia_robot.launch.py  ctrl_swerve_drive.launch.py  gs_util.launch.py  mission_full.launch.py  perception.launch.py
src/ia_robot/src/: collision_checker.py  example_ia_robot_sensor.py  human_pointcloud_filter_node.py  mission_coordinator.py  mission_coordinator_separated.py  mission_states.py  mobile_ik_controller.py  obstacle_avoidance_config.py  simple_mobile_ik.py  test_obstacle_avoidance.py
src/ia_robot/src/ultrasonic_emergency_stop/: ultrasonic_emergency_stop.py
src/ia_robot_ros/: README.md
src/ia_robot_ros/ia_robot/: CMakeLists.txt  README_OBSTACLE_AVOIDANCE.md
src/ia_robot_ros/ia_robot/config/: ia_robot_controller.yaml  nav2.rviz  nav2_params.yaml  nav2_params_genesis.yaml  nav2_params_real.yaml  twist_mux.yaml
src/ia_robot_ros/ia_robot/launch/: ctrl_ia_robot.launch.py  ctrl_swerve_drive.launch.py  gs_util.launch.py  human_filter.launch.py  joint_states_remapper.launch.py  mission_full.launch.py  nav2_with_alignment.launch.py  perception.launch.py  safety_system.launch.py
src/ia_robot_ros/ia_robot/maps/: house_1010.pgm  ia_map.pgm  ia_map.yaml  map_0722.json  map_0722.pgm  map_1020.pgm  map_1020.yaml  map_1111.pgm  map_1111.yaml  map_ffd.yaml
src/ia_robot_ros/ia_robot/rviz/: laser_2d.rviz  nav2.rviz
src/ia_robot_ros/ia_robot/src/: example_ia_robot_sensor.py  human_pointcloud_filter_node.py  joint_states_remapper.py  mission_coordinator.py  test_obstacle_avoidance.py
src/ia_robot_ros/ia_robot/src/kinematics/: __init__.py  collision_checker.py  mobile_ik_config.py  mobile_ik_controller.py  mobile_ik_visualizer.py  signed_distance_field.py  simple_mobile_ik.py
src/ia_robot_ros/ia_robot/src/ultrasonic_emergency_stop/: ultrasonic_emergency_stop.py
src/ia_robot_ros/ia_robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/ia_robot_ros/ia_robot_interfaces/action/: MoveToStandby.action
src/ia_robot_ros/ia_robot_interfaces/srv/: SetJointLock.srv
src/ia_robot_ros/ia_robot_urdf/: CMakeLists.txt  Dockerfile  README.md  package.xml
src/ia_robot_ros/ia_robot_urdf/config/: joint_names_ia_robot.yaml  urdf.rviz
src/ia_robot_ros/ia_robot_urdf/launch/: display.launch.py  display_bag.launch.py
src/ia_robot_ros/ia_robot_urdf/meshes/: ARM0_RIGHT.STL  ARM1_RIGHT.STL  ARM3_RIGHT.STL  Leg_back_left_1_nocable.STL  Leg_back_left_2.STL  Leg_back_right_1.STL  Leg_back_right_1_nocable.STL  Leg_back_right_2.STL  Leg_front_left_1.STL  Leg_front_left_1_nocable.STL  Leg_front_left_3.STL  Leg_front_right_1_nocable.STL  Leg_front_right_2.STL  Leg_front_right_3.STL
src/ia_robot_ros/ia_robot_urdf/scripts/: convert_urdf_to_absolute.py
src/ia_robot_ros/ia_robot_urdf/urdf/: ia_robot.absolute.urdf  ia_robot.csv  ia_robot.urdf  ia_robot_ik.absolute.urdf  ia_robot_ik.urdf  ia_robot_model.urdf
src/ia_robot_ros/robot_self_filter/: CMakeLists.txt  README.md  package.xml
src/ia_robot_ros/robot_self_filter/config/: robot_self_filter.yaml
src/ia_robot_ros/robot_self_filter/include/robot_self_filter/: bodies.h  point_hesai.h  point_ouster.h  point_pandar.h  point_robosense.h  self_mask.h  self_see_filter.h  shapes.h
src/ia_robot_ros/robot_self_filter/launch/: dual_lidar_self_filter.launch.py  lidar_self_filter.launch.py
src/ia_robot_ros/robot_self_filter/params/: example.yaml
src/ia_robot_ros/robot_self_filter/scripts/: pointcloud_merger.py
src/ia_robot_ros/robot_self_filter/src/: bodies.cpp  load_mesh.cpp  self_filter.cpp  self_mask.cpp  test_filter.cpp
src/ia_robot_sim/: CMakeLists.txt  package.xml
src/ia_robot_urdf/: CMakeLists.txt  README.markdown  package.xml
src/ia_slam_toolbox/: CMakeLists.txt  package.xml
src/iabot_0811/: CMakeLists.txt  package.xml
src/iabot_0811/config/: joint_names_iabot_0811.yaml
src/iabot_0811/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
src/iabot_0811/meshes/: ARM-LEFT-0001.STL  ARM-LEFT-0002.STL  ARM-LEFT-0003.STL  ARM-LEFT-0004.STL  ARM-LEFT-0005.STL  ARM-LEFT-0006.STL  ARM-RIGHT-0001.STL  ARM-RIGHT-0002.STL  ARM-RIGHT-0003.STL  ARM-RIGHT-0004.STL  ARM-RIGHT-0005.STL  ARM-RIGHT-0006.STL  Leg-back-left-0001.STL  Leg-back-left-0002.STL  Leg-back-right-0001.STL  Leg-back-right-0002.STL  Leg-front-left-0001.STL  Leg-front-left-0002.STL  Leg-front-left-0003.STL  Leg-front-right-0001.STL  Leg-front-right-0002.STL  Leg-front-right-0003.STL
src/iabot_0811/urdf/: iabot_0811.csv  iabot_0811.urdf
src/isaacsim/: run_isaacsim1.py
src/map_merge/: CMakeLists.txt
src/stm_driver/: CMakeLists.txt  package.xml
src/stm_driver/include/stm_driver/: dataparse.hpp  msgparse.hpp  stm_driver.hpp  tcp.hpp  udp.hpp
src/stm_driver/src/: dataparse.cpp  stm_driver.cpp  tcp.cpp  udp.cpp
src/stm_msg/: CMakeLists.txt  package.xml
src/stm_msg/msg/: Tcpdata.msg  Tcpsend.msg
src/turn_on_ia_robot/: CMakeLists.txt  package.xml
src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
(+264 files in other folders)
