<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ia_integrated_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ia@todo.todo">ia</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>wheeltec_slam_toolbox</depend>
  <depend>ia_robot</depend>
  <depend>explore_lite</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
