<package format="2">
  <name>ia_robot_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ia_robot (version 0821)</p>
    <p>This package contains configuration data, 3D models and launch files
for ia_robot robot</p>
  </description>
  <author>Intuitive Autonomy</author>
  <maintainer email="hanxi.wan@intuitiveautonomy.com" />
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>